"""Contract paid with a fixed monthly salary."""

from dataclasses import dataclass

from contract import Contract


@dataclass
class SalariedContract(Contract):
    """Contract type for an employee being paid a monthly salary."""

    monthly_salary: float
    percentage: float = 1

    def get_payment(self) -> float:
        return self.monthly_salary * self.percentage
