---
title: Composition design - employee compensation
---
classDiagram
    direction TB
    class Employee {
        +name : str
        +id : int
        +compute_pay() float
    }
    class Contract {
        <<abstract>>
        +get_payment()* float
    }
    class HourlyContract {
        +pay_rate : float
        +hours_worked : int = 0
        +employer_cost : float = 1000
        +get_payment() float
    }
    class SalariedContract {
        +monthly_salary : float
        +percentage : float = 1
        +get_payment() float
    }
    class FreelancerContract {
        +pay_rate : float
        +hours_worked : int = 0
        +vat_number : str = ""
        +get_payment() float
    }
    class Commission {
        <<abstract>>
        +get_payment()* float
    }
    class ContractCommission {
        +commission : float = 100
        +contracts_landed : int = 0
        +get_payment() float
    }
    Employee "1" --> "1" Contract : +contract
    Employee "1" --> "0..1" Commission : +commission
    Contract <|-- HourlyContract
    Contract <|-- SalariedContract
    Contract <|-- FreelancerContract
    Commission <|-- ContractCommission
